--- a/Properties/launchSettings.json
+++ b/Properties/launchSettings.json
@@ -1,26 +1,19 @@
 ﻿{
   "$schema": "http://json.schemastore.org/launchsettings.json",
   "iisSettings": {
-    "windowsAuthentication": false, 
-    "anonymousAuthentication": true, 
+    "windowsAuthentication": false,
+    "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:60454"
+      "applicationUrl": "http://localhost:38586",
+      "sslPort": 44332
     }
   },
   "profiles": {
-    "IIS Express": {
-      "commandName": "IISExpress",
-      "launchBrowser": true,
-      "launchUrl": "api/values",
-      "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
-      }
-    },
     "DecathlonStock": {
       "commandName": "Project",
       "launchBrowser": true,
-      "launchUrl": "api/stock",
-      "applicationUrl": "http://localhost:5000",
+      "launchUrl": "stock",
+      "applicationUrl": "https://localhost:5001;http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
